hphp/hack/test/typecheck/variadic_args7.php
<?hh

function f(string ...$args,): void {}

function test() {
  f('str', 'str', 20);
}
